# estudo-cansi

./: .gitignore  arq.tgz  deb
X11/01/: README.md  autogen.sh  nob.c
X11/01/src/: Makefile
Xlib/01/: Makefile  README.md  main.c
Xlib/02/: Makefile  main.c
Xlib/03/: README.md  main.c
Xlib/04/: Makefile  main.c
Xlib/05/: main.cpp
assembler/01/: Makefile  cat.asm
barrett/01/: README.md  main.c
binary/01/: main.c
binary/02/: README.md
binary/03/: README.md
binary/04/: README.md  main.c
curl/01/: .gitignore  main.c
curl/01/.cache/clangd/index/: main.c.DD55634BB0B6A89C.idx
curl/02/: Makefile  main.c
diretorios/01/: Makefile  main.c
diretorios/02/: README.md  main.c
examples/ffmpeg/: a.md  b  bb  cc  ll
examples/ffmpeg/01-ex/: README.md  video_frames.c
examples/ffmpeg/02-ex/: Makefile  README.md  waves.txt
examples/ffmpeg/03-ex/: frames.mak  video_frames.c
examples/ffmpeg/04-ex/: Makefile  README.md  frames.mak  video_frames.c
examples/frames/: README.md
examples/frames/01-ex/: .clang-format  my_frames.c
examples/frames/02-ex/: frames.mak  my_frames.c
examples/frames/04-ex/: Makefile  compile.sh  frames.mak  main.c  video_frames.c
examples/frames/05-ex/: Makefile  NFRAMES.md  video_frames.c
examples/frames/06-ex/: NFRAMES.md  README.md  frames.mak  video_frames.c
examples/frames/07-ex/: Makefile  README.md  video_frames.c
examples/frames/08-ex/: video_frames.c
examples/frames/09-ex/: video_frames.c
examples/frames/10-ex/: video_frames.c
examples/frames/11-ex/: video_frames.c
examples/frames/12-ex/: out  video_frames.c
examples/frames/13-ex/: video_frames.c
examples/frames/14-ex/: video_frames.c
examples/frames/15-ex/: out  video_frames.c
examples/frames/16-ex/: video_frames.c
examples/frames/17-ex/: video_frames.c
examples/frames/18-ex/: video_frames.c
examples/frames/19-ex/: video_frames.c
examples/frames/20-ex/: frames.mak  video_frames.c
examples/frames/21-ex/: video_frames.c
examples/frames/22-ex/: swap-fonts.sh  video_frames.c
examples/frames/23-ex/: video_frames.c
examples/frames/24-ex/: Makefile  README.md  bug  video_frames.c
examples/frames/25-ex/: swap-video.sh  video_frames.c
examples/frames/26-ex/: Makefile  deb  frames.mak  video_frames.c
examples/frames/lua/5.4.6/01-ex/: Makefile  frame.mak  test_frame.lua
examples/list/02-ex/: Makefile  ex-1.c
examples/list/03-ex/: Makefile  list.mak  lista_pessoa.c
examples/list/04-ex/: Makefile  list.mak  lista_pessoa.c
examples/list/05-ex/: lista_pessoa.c
examples/list/lua/01-ex/: .clang-format  compile.sh  list.mak
examples/list/lua/02-ex/: list.mak
examples/list/lua/5.1.5/01-ex/: .clang-format  Makefile  NOTE.md  compile.sh  list.mak  list_lua.c  test_list.lua
examples/list/lua/5.4.6/02-ex/: list_lua.c  test_list.lua
examples/list/lua/5.4.6/03-ex/: README.md  list_lua.c  test_list.lua
examples/list/lua/5.4.6/04-ex/: a  list.mak  list_lua.c  test_list.lua
examples/list/lua/5.4.6/05-ex/: list_lua.c  test_list.lua
examples/list/lua/5.4.6/06-ex/: list_lua.c  test_list.lua
examples/list/lua/5.4.6/07-ex/: list_lua.c  test_list.lua
ffmpeg/01/: Makefile  README.md  main.c
ffmpeg/02/: README.md
ffmpeg/03/: Makefile  README.md  configure.ac
ffmpeg/03/src/: Makefile.am  main.c
ffmpeg/04/: Makefile.am  README.md  autogen.sh  configure.ac
ffmpeg/04/src/: Makefile.am  main.c
ffmpeg/05/: main.c
ffmpeg/06/: README.md  main.c
ffmpeg/07/: main.c
ffmpeg/08/: README.md  main.c
ffmpeg/09/: compile_commands.json  frame.ppm  main.c
find_files/01/: .clang-format  .gitignore  .yabs  Makefile  main.c  set_test.sh
find_files/01/.cache/clangd/index/: main.c.6E27DE3ABE53269E.idx
fork/01/: main.c
fork/02/: Makefile  README.md  exemplo1.c  exemplo2.c
hash/: README.md
hash/01/: README.md  main.c
heranca/01/: README.md  main.c
heranca/02/: Makefile  main.c
heranca/03/: main.c
km/01/: Makefile  build.sh  cats.c
minimowebserver/01/: Makefile  main.c
minimowebserver/02/: Makefile  fullChain.pem  generate_and_validate_ssl.sh  main.c  theKey.pem
minimowebserver/03/: Makefile
mono/01/: .gitignore  Makefile  README.md  main.c  program.cs
mono/02/: Makefile.am  autogen.sh  configure.ac
mono/02/src/: Makefile.am  mono.mk  program.cs
mono/03/: Makefile.am  autogen.sh  configure.ac
mono/03/src/: Makefile.am  mono.mk
ncurse/01/: main.c
ncurse/02/: Makefile  README.md  main.c
onemalloc/: sum.md  t10.cpp  t11.cpp  t12.cpp  t2.c  t3.cpp  t4.cpp  t5.cpp  t6.cpp  t7.cpp  t8.cpp  t9.cpp
panin/: Makefile
pipe/01/: main.c
pipe/02/: README.md  main.c
pipe/03/: Makefile  README.md  main.c  pipe_pwd.sh
pipe/04/: README.md  main.c  script.sh
program_a/: play_audio.c  play_audio.h  program_a.c  readme.md  yt
remove/01/: README.md  main.c
ssh/01/: Makefile  README.md  main.c
ssh/01-key/: README.md  main.c
ssh/01-key-a/: README.md  main.c
ssh/01-key-b/: main.c
ssh/03/: Makefile  README.md  main.c
ssh/04/: main.c  main.c.1
ssh/scp-01/: main.c
ssh/scp-01-key/: main.c
tcpip/01/: Makefile  astyle.cfg  client.c  server.c
tcpip/02/: README.md  client.c  server.c
um_malloc/01/: README.md
vetores/determinante/: README.md  main.c  main.oc
vetores/determinante2/: Makefile  README.md  main.c
vetores/produto_escalar/: main.c
vetores/produto_vetorial/: README.md  main.c
xml/01/: Makefile
xml/01-b/: Makefile.am  autogen.sh  configure.ac  exemplo.xml
xml/02/: Makefile  README.md  compile_commands.json  exemplo.xml  main.c
